# github_agentic_workflow

./: CMakeLists.txt
.github/workflows/: build_deploy.yaml  issue-triage-agent.lock.yml  issue-triage-agent.md
src/: main.cpp
tests/: test_main.cpp
